--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.9",
     "react-flag-kit": "^0.3.1",
+    "react-image-zoom": "^1.3.1",
     "react-move": "^6.4.0",
     "react-notification-system": "^0.4.0",
     "react-rating": "^2.0.5",
