--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "clsx": "^1.1.1",
     "d3-ease": "^2.0.0",
     "formik": "^2.2.6",
+    "history": "^5.0.0",
     "nouislider": "^14.6.3",
     "nouislider-react": "^3.3.9",
+    "public-ip": "^4.0.3",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.4.3",
@@ -27,11 +29,15 @@
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.9",
     "react-flag-kit": "^0.3.1",
+    "react-geocode": "^0.2.2",
+    "react-google-autocomplete": "^1.2.6",
+    "react-google-maps": "^9.4.5",
     "react-image-zoom": "^1.3.1",
     "react-move": "^6.4.0",
     "react-notification-system": "^0.4.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^5.2.0",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "^4.0.1",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.5.1",
