--- a/client/package.json
+++ b/client/package.json
@@ -20,15 +20,16 @@
     "nouislider": "^14.6.3",
     "nouislider-react": "^3.3.9",
     "public-ip": "^4.0.3",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.4.3",
     "react-chartist": "^0.14.3",
     "react-circular-progressbar": "^2.0.3",
     "react-countup": "^4.3.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-feather": "^2.0.9",
     "react-flag-kit": "^0.3.1",
+    "react-ga": "^3.3.0",
     "react-geocode": "^0.2.2",
     "react-google-autocomplete": "^1.2.6",
     "react-google-maps": "^9.4.5",
