--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node lserver.js",
     "server": "nodemon lserver.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "predeploy": "npm run dev",
+    "deploy": "gh-pages -d build"
   },
   "author": "mahesh",
   "license": "MIT",
@@ -30,6 +32,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "nodemon": "^2.0.4"
   }
 }
