--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "Shoppingg list build with the MERN stack",
   "main": "lserver.js",
+ 
   "scripts": {
+    
     "client-install": "npm install --prefix client",
     "start": "node lserver.js",
     "server": "nodemon lserver.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "predeploy": "npm run dev",
-    "deploy": "gh-pages -d build"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+
   },
   "author": "mahesh",
   "license": "MIT",
