--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-move": "^6.4.0",
     "react-notification-system": "^0.4.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.2",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.5.1",
     "uuid": "^8.3.0",
